bug menu animation + overflow

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -245,7 +245,8 @@ body {
         width: calc(100% - 15px);
         &--menu {
             padding: 0.7em;
-            margin-bottom: 1em;
+            margin-bottom: 1em;           
+            
         }
         &__titre {
             
@@ -256,6 +257,17 @@ body {
             &--menu {
                 margin: 0;
                 margin-bottom: 5px;
+                width: 70%;
+                padding-right: 10px;
+
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                width: 100px; /* à 100px pas de bug, mais trop court et pas augmentation prog */
+
+
+
+                
 
             }
         }
@@ -269,6 +281,16 @@ body {
                 margin: 0;
                 font-size: 0.9em;
                 margin-bottom: -10px;
+                width: 70%;
+                padding-right: 10px;
+                
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
+                width: 100px;
+    
+
+
 
             }
         }
@@ -407,29 +429,42 @@ body {
     color: white;
     -webkit-text-stroke-width: 2px;
     -webkit-text-stroke-color: black;
+    
     &--second {
         font-size: 1.5em;
         color: transparent;
         -webkit-text-stroke-width: 2px;
         -webkit-text-stroke-color: black;
         position: absolute;
+        
 
     }
     
 
     &--menu {
+        
 
+    }
+    &--home {
+        width:1.5em;
     }
 }
 .heart-box {
-    background-color: rgb(247, 247, 247);
-    width: 50px;
-    height: 30px;    
+    height: 30px;
     position: absolute;
     top: 0;
-    left: -12px;
     z-index: -1;
+    &--menu {
+    background-color: rgb(247, 247, 247);
+    width: 50px;
+    left: -12px;
+    }
+    &--home {
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    left: -8px;
 
+    }
 }
 .menu {
 
